add change theme

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Manrope">
-<link href="https://fonts.cdnfonts.com/css/iranyekan" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<!-- <link href="https://v1.fontapi.ir/css/Yekan" rel="stylesheet"> -->
+<link href="https://v1.fontapi.ir/css/Vazir" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://v1.fontapi.ir/css/Yekan" rel="stylesheet">
     <meta name="theme-color" content="#000000" />
     <meta
@@ -17,7 +18,7 @@
  
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
  
-    <title>React App</title>
+    <title>Todo Man</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
